add memo module

--- a/app.json
+++ b/app.json
@@ -4,7 +4,8 @@
     "pages/xiaomi/xiaomi",
     "pages/2048/2048",
     "pages/weather/weather",
-    "pages/calc/calc"
+    "pages/calc/calc",
+    "pages/memo/memo"
   ],
   "window":{
     "backgroundTextStyle":"black",
