--- a/app.json
+++ b/app.json
@@ -7,6 +7,9 @@
         "pages/memo/memo",
         "pages/QRcode/QRcode",
         "pages/poi/poi",
+        "pages/poi/scenic/scenic",
+        "pages/poi/food/food",
+        "pages/poi/entertainment/entertainment",
         "pages/around/around",
         "pages/tabs/tabs",
         "pages/schedule/schedule",
